[package]
name = "dso_dojo_slow_postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = "2"
rand = "0.8"
rand_pcg = "0.3.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]
